Barebone Java/cmd output/part5_output.txt
C:\Users\Aya\OneDrive\Desktop\FJP>javadoc FirstClass.java
Loading source file FirstClass.java...
Constructing Javadoc information...
Standard Doclet version 13.0.2
Building tree for all the packages and classes...
Generating .\FirstClass.html...
FirstClass.java:12: error: invalid use of @return
        * @return                       This method returns nothing
          ^
Generating .\package-summary.html...
Generating .\package-tree.html...
Generating .\constant-values.html...
Building index for all the packages and classes...
Generating .\overview-tree.html...
Generating .\deprecated-list.html...
Generating .\index-all.html...
Building index for all classes...
Generating .\allclasses-index.html...
Generating .\allpackages-index.html...
Generating .\index.html...
Generating .\help-doc.html...
1 error

C:\Users\Aya\OneDrive\Desktop\FJP>index.html